# SmallProjects

./: Inventory.cpp  Product.cpp  Product.hpp  README.md  main.cpp  textGUI.cpp
Conway/: gameOfLife.py  test_gameOfLife.py
ProductInventoryProject/: Inventory.hpp  Inventory_classes.cbp  Inventory_classes.depend  Inventory_classes.layout
SFML/SFML_BoilerPlate/: .gitignore  CMakeLists.txt  README.md
SFML/SFML_BoilerPlate/src/: geometry.cpp  geometry.hpp  hardMath.hpp  main.cpp
SFML/SFML_BoilerPlate/tests/: CMakeLists.txt  geometryTests.cpp  hardMathTests.cpp
StaticSiteGenerator/: .gitignore  README.md  clean.sh  lint.sh  main.sh  server.py  test.sh
StaticSiteGenerator/example_site/: index.html
StaticSiteGenerator/example_site/recipes/: soft_pretzels.html  tomato_soup.html
StaticSiteGenerator/markdown_page/: template.html
StaticSiteGenerator/markdown_page/content/: index.md
StaticSiteGenerator/markdown_page/content/recipes/: chocolate_cookies.md  soft_pretzels.md  tomato_soup.md
StaticSiteGenerator/markdown_page/static/: styles.css
StaticSiteGenerator/public/recipes/: chocolate_cookies.html
StaticSiteGenerator/src/: HTMLNode.py  converterMD.py  dirCopy.py  leafNode.py  main.py  markdown.py  markdownBlock.py  markdownNodeGen.py  markdownText.py  parentNode.py  textNode.py  textnode.py
StaticSiteGenerator/static/: styles.css
StaticSiteGenerator/tests/: test_textnode.py  tests_HTMLNode.py  tests_leafNode.py  tests_markdown.py  tests_markdownBlock.py  tests_markdownNodeGen.py  tests_markdownText.py  tests_parentNode.py  tests_textNode.py
